grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ =>
      choice(
        $.function_definition,
        $.import_declaration,
        $.export_declaration,
        $.enum_declaration,
        $.struct_declaration,
        $.top_level_declaration,
        $.preproc_ifver,
        $.preproc_ifdef,
        $.preproc_def,
        $.preproc_error,
        $.preproc_region
      ),

    _block_level_item: $ =>
      choice(
        $.declaration,
        $._statement,
        $.preproc_error,
        $.preproc_def,
        alias($.preproc_ifver_in_block, $.preproc_ifver),
        alias($.preproc_ifdef_in_block, $.preproc_ifdef),
        alias($.preproc_region_in_block, $.preproc_region)
      ),

    // Preprocessors

    preproc_arg: $ => token(prec(0, repeat1(/.|\\\r?\n/))),

    // Main Grammar

    function_definition: $ =>
      seq(
        $._function_definition_specifiers,
        $.function_declarator,
        $.compound_statement
      ),

    field_function_declaration: $ =>
      statement(
        $._field_function_declaration_specifiers,
        $.function_import_declarator
      ),

    top_level_declaration: $ =>
      statement(
        $._declaration_specifiers,
        commaSep1(choice($._declarator, $.init_literal_declarator))
      ),

    declaration: $ =>
      statement(
        $._declaration_specifiers,
        commaSep1(choice($._declarator, $.init_declarator))
      ),

    export_declaration: $ => statement('export', commaSep1($.identifier)),

    import_declaration: $ =>
      statement('import', choice($.function_declaration, $._type_declaration)),

    _type_declaration: $ => seq($._type_specifier, $.identifier),

    _function_definition_specifiers: $ =>
      seq(repeat($.function_access_specifier), $._function_type_specifier),

    _field_function_declaration_specifiers: $ =>
      seq(
        repeat(
          alias($.field_function_access_specifier, $.function_access_specifier)
        ),
        $._function_type_specifier
      ),

    function_access_specifier: $ => choice('protected', 'static'),

    function_type: $ => choice('function', 'void'),

    _declaration_specifiers: $ => $._type_specifier,

    _parameter_declaration_specifiers: $ =>
      seq(optional($.type_qualifier), $._type_specifier),

    type_qualifier: $ => 'const',

    _declarator: $ => choice($.pointer_declarator, $._pointerless_declarator),

    _pointerless_declarator: $ => choice($.array_declarator, $.identifier),

    _parameter_declarator: $ =>
      choice($.pointer_declarator, $.array_declarator, $.identifier),

    _parameter_import_declarator: $ =>
      choice($.pointer_declarator, $.array_declarator, $.enumerator),

    _field_declarator: $ =>
      choice(
        alias($.pointer_field_declarator, $.pointer_declarator),
        $._pointerless_field_declarator
      ),

    pointer_declarator: $ =>
      prec.dynamic(1, prec.right(seq('*', $._pointerless_declarator))),
    function_declarator: $ =>
      prec(1, seq($._function_declarator, $.parameter_list)),

    _function_declarator: $ =>
      choice(
        $._function_pointer_declarator,
        $._function_pointerless_declarator
      ),
    function_qualifier: $ => 'noloopcheck',

    function_import_declarator: $ =>
      prec(1, seq($._function_import_declarator, $.parameter_import_list)),

    _function_import_declarator: $ =>
      choice(
        $._function_import_pointer_declarator,
        $._function_import_pointerless_declarator
      ),
    function_field_declarator: $ =>
      prec(1, seq($._field_declarator, $.parameter_list)),

    array_declarator: $ =>
      prec(
        1,
        seq($.identifier, '[', optional(choice($._expression, '*')), ']')
      ),
    init_declarator: $ => seq($._declarator, '=', $._expression),

    init_literal_declarator: $ =>
      seq($._pointerless_declarator, '=', $._literal),

    compound_statement: $ => seq('{', repeat($._block_level_item), '}'),

    field_access_specifier: $ =>
      choice('import', 'attribute', 'writeprotected', 'protected'),

    struct_type_qualifier: $ => 'managed',

    _type_specifier: $ => choice($.primitive_type, $._type_identifier),

    primitive_type: $ =>
      token(choice('bool', 'char', 'float', 'int', 'long', 'short', 'string')),

    enum_declaration: $ =>
      statement('enum', $._type_identifier, $.enumerator_list),

    enumerator_list: $ => seq('{', commaSep($.enumerator), optional(','), '}'),

    struct_declaration: $ =>
      statement(
        optional($.struct_type_qualifier),
        'struct',
        $._type_identifier,
        optional($.extends_type),
        $.field_declaration_list
      ),

    extends_type: $ => seq('extends', $._type_identifier),

    field_declaration_list: $ =>
      seq('{', repeat($._field_declaration_list_item), '}'),

    _field_declaration_list_item: $ =>
      choice(
        $.field_declaration,
        $.field_function_declaration,
        alias($.preproc_ifver_in_field_declaration_list, $.preproc_ifver),
        alias($.preproc_ifdef_in_field_declaration_list, $.preproc_ifdef),
        alias($.preproc_region_in_field_declaration_list, $.preproc_region)
      ),

    field_declaration: $ =>
      statement(
        repeat($.field_access_specifier),
        $._declaration_specifiers,
        $._field_declarator
      ),

    enumerator: $ =>
      seq($.identifier, optional(seq('=', choice($.identifier, $._literal)))),

    parameter_list: $ => seq('(', commaSep($.parameter_declaration), ')'),

    parameter_declaration: $ =>
      seq(
        $._parameter_declaration_specifiers,
        optional($._parameter_declarator)
      ),

    parameter_import_list: $ =>
      seq('(', commaSep($.parameter_import_declaration), ')'),

    parameter_import_declaration: $ =>
      seq(
        $._parameter_declaration_specifiers,
        optional($._parameter_import_declarator)
      ),

    // Statements

    expression_statement: $ =>
      statement(optional(choice($._expression, $.comma_expression))),

    _expression: $ =>
      choice(
        $.assignment_expression,
        $.new_expression,
        $.logical_expression,
        $.bitwise_expression,
        $.equality_expression,
        $.relational_expression,
        $.shift_expression,
        $.math_expression,
        $.pointer_expression,
        $.subscript_expression,
        $.call_expression,
        $.field_expression,
        $.identifier,
        $.number_literal,
        $.string_literal,
        $.true,
        $.false,
        $.null,
        $.concatenated_string,
        $.char_literal,
        $.parenthesized_expression
      ),

    assignment_expression: $ =>
      prec.right(
        PREC.ASSIGNMENT,
        seq(
          $._expression,
          choice('=', '*=', '/=', '+=', '-=', '<<=', '>>=', '&=', '^=', '|='),
          $._expression
        )
      ),

    new_expression: $ =>
      prec.right(
        PREC.NEW,
        seq('new', $._type_specifier, optional($.new_array_declator))
      ),

    logical_expression: $ =>
      choice(
        prec.left(PREC.LOGICAL_OR, seq($._expression, '||', $._expression)),
        prec.left(PREC.LOGICAL_AND, seq($._expression, '&&', $._expression)),
        prec.left(PREC.UNARY, seq('!', $._expression))
      ),

    math_expression: $ =>
      choice(
        prec.left(PREC.ADD, seq($._expression, '+', $._expression)),
        prec.left(PREC.ADD, seq($._expression, '-', $._expression)),
        prec.left(PREC.MULTIPLY, seq($._expression, '*', $._expression)),
        prec.left(PREC.MULTIPLY, seq($._expression, '/', $._expression)),
        prec.left(PREC.MULTIPLY, seq($._expression, '%', $._expression)),
        prec.right(PREC.UNARY, seq('-', $._expression)),
        prec.right(PREC.UNARY, seq('+', $._expression)),
        prec.right(PREC.UNARY, seq(choice('--', '++'), $._expression)),
        prec.right(PREC.UNARY, seq($._expression, choice('++', '--')))
      ),

    subscript_expression: $ =>
      prec(PREC.SUBSCRIPT, seq($._expression, '[', $._expression, ']')),

    call_expression: $ => prec(PREC.CALL, seq($._expression, $.argument_list)),

    argument_list: $ => seq('(', commaSep($._expression), ')'),

    field_expression: $ =>
      seq(prec(PREC.FIELD, seq($._expression, '.')), $._field_identifier),

    number_literal: $ => /\d+(\.\d+)?/,

    char_literal: $ =>
      seq("'", choice($.escape_sequence, token.immediate(/[^\n']/)), "'"),

    concatenated_string: $ => seq($.string_literal, repeat1($.string_literal)),

    string_literal: $ =>
      seq(
        '"',
        repeat(
          choice(token.immediate(prec(1, /[^\\"\n]+/)), $.escape_sequence)
        ),
        '"'
      ),

    //FIXME: Replace with AGS String formatting
    escape_sequence: $ =>
      token.immediate(
        seq(
          '%',
          choice(
            /[^xuU]/,
            /\d{2,3}/,
            /x[0-9a-fA-F]{2,}/,
            /u[0-9a-fA-F]{4}/,
            /U[0-9a-fA-F]{8}/
          )
        )
      ),

    _literal: $ =>
      choice($.number_literal, $.true, $.false, $.null, $.char_literal),

    identifier: $ => /[a-zA-Z_]\w*/,
    scoped_identifier: $ =>
      prec(1, seq($._type_identifier, '::', $.identifier)),
    _type_identifier: $ => alias($.identifier, $.type_identifier),
    _field_identifier: $ => alias($.identifier, $.field_identifier),
